<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText 
        android:id="@+id/uid_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint_text"
        android:inputType="text"
        android:imeOptions="actionSearch"
       	style="@style/InputBox"
       	
        />
    
    <Spinner
        android:id="@+id/mode_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uid_entry"
        android:layout_alignLeft="@id/uid_entry" 
        style="@style/InputBox"/>
    
    <Button
        android:id="@+id/submit_button"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/uid_entry"
        android:layout_below="@id/uid_entry"  
        android:text="@string/button_submit" 
        style="@style/SubButton"         
        />
    
    <TextView
        android:id="@+id/results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_flow_label"
        android:layout_below="@id/submit_button"
        style="@style/TitleText"        
        />
    
    <HorizontalScrollView 
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/results_label">
        
        <LinearLayout
            android:id="@+id/media_flow_view"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
        </LinearLayout>
    </HorizontalScrollView>
    
    <RelativeLayout 
        android:id="@+id/user_metadata_container"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/scroll_container"
    	android:visibility="gone">
        
        <TextView 
            android:id="@+id/user_title_label"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	style="@style/MinorTitleText"
            />
        
        <TextView
        android:id="@+id/album_artist_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_title_label"
        android:text="@string/album_artist_label" />
        <TextView
        android:id="@+id/album_artist_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_title_label"
        android:layout_toRightOf="@id/album_artist_label" />        
        
        <TextView
        android:id="@+id/album_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_name_label"
        android:layout_below="@id/album_artist_label" />
        <TextView 
        android:id="@+id/album_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_artist_text"
        android:layout_toRightOf="@id/album_name_label"
         />
        
        <TextView
        android:id="@+id/album_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_name_label"
        android:text="@string/play_count_label"
        />
        <TextView
        android:id="@+id/album_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_name_text"
        android:layout_toRightOf="@id/album_count_label"
         />
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/artist_metadata_container"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/scroll_container"
    	android:visibility="gone">
        
        <TextView
            android:id="@+id/artist_name_label"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	style="@style/MinorTitleText"
        	/>
        
        <TextView
            android:id="@+id/artist_album_name_label"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/artist_name_label"
    
        	android:text="@string/album_name_label"
        	/>
        <TextView 
            android:id="@+id/artist_album_name_text"
            android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:layout_below="@id/artist_name_label"
       	 	android:layout_toRightOf="@id/artist_album_name_label"
       	 	/>
        
        <TextView
            android:id="@+id/artist_listener_label" 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/artist_album_name_label"
        	android:text="@string/listener_label"
        	/>
        <TextView 
            android:id="@+id/artist_listener_text"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/artist_album_name_text"
        	android:layout_toRightOf="@id/artist_listener_label"
        	
        	/>
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/tag_metadata_container"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/scroll_container"
    	android:visibility="gone">
        
        <TextView 
            android:id="@+id/tag_title_label"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	style="@style/MinorTitleText"
            />
        
        <TextView 
            android:id="@+id/tag_album_name"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/tag_title_label"
        	android:text="@string/album_name_label"
            />
        <TextView 
            android:id="@+id/tag_album_text"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/tag_title_label"
        	android:layout_toRightOf="@id/tag_album_name"
            />
        
        <TextView
            android:id="@+id/tag_artist_name"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/tag_album_name"
        	android:text="@string/album_artist_label"
             />
        <TextView 
            android:id="@+id/tag_artist_text"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/tag_album_text"
        	android:layout_toRightOf="@id/tag_artist_name"
	
            />
        
    </RelativeLayout>
    
</RelativeLayout>
